--- a/style.css
+++ b/style.css
@@ -21,14 +21,18 @@ body{
 
 .topPanel{
     height: 80px;
+    max-height: 100%;
+    
     background-color: #1e1e1e;
     box-shadow: 0px 0px 20px 6px #1e1e1ea6;
+
+    margin-bottom: 20px;
 }
 .navPanel{
     margin-left: auto;
     margin-right: auto;
     height: 100%;
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,10 +67,12 @@ body{
 }
 
 .navMid{
-    margin-left: 10%;
-    margin-right: 21%;
+    margin-left: auto;
+    margin-right: auto;
     height: 100%;
     width: 20%;
+
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,8 +84,10 @@ body{
     border-radius: 16px;
 }
 
-.rightElement{
+.navRight{
     float: right;
+
+    margin-left: 50%;
 }
 
 .button:hover{
@@ -88,34 +96,20 @@ body{
 }
 
 .main{
-    width: 100%;
-    /* height: 83%; */
-
-    height: 84vh;
-
     display: flex;
     justify-content: center;
     align-items: center;
-
-    /* position: absolute; */
-    /* top: 30%; */
 }
 
 .mainBlock{
+    /* width: 552px; */
+    max-width: 60%;
+
     backdrop-filter: blur(15px);
     background: #1e1e1e;
     color: white;
 
     box-shadow: 0px 0px 36px 6px rgba(255, 255, 255, 0.068);
-
-    /* width: 56%; */
-
-    /* margin-top: 20px; */
-    /* height: 80%; */
-    /* padding: 20px; */
-
-    /* position: absolute; */
-    /* top: 30%; */
 
     border-radius: 32px;
 }
@@ -126,21 +120,20 @@ body{
 
 .topContent{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 .midContent{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
-    margin-top: 25px;
-    margin-bottom: 25px;
+    flex-direction: column;
 }
 .botContent{
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    align-content: center;
 }
 .map{
     border-radius: 24px;
@@ -165,7 +158,7 @@ body{
 
     background: #1e1e1e;
 
-    margin-top: auto;
+    margin-top: 20px;
 
     color: rgba(255, 255, 255, 0.720);
 }
@@ -173,13 +166,11 @@ body{
 .footerContent{
     /* background-color: #700000; */
     height: 100%;
-
     margin: auto;
-
     display: flex;
-    
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 .footerContent p{
     text-align: center;
