--- a/carousel.css
+++ b/carousel.css
@@ -6,7 +6,7 @@
     margin-left: auto;
     margin-right: auto;
 
-    width: 400px;
+    width: 100%;
     height: 400px;
     position: relative;
   }
