--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     margin: 0;
     color: #b1b1b1;
     font-family: "Nunito";
+
+    cursor: url("cursor/pointer.cur"), auto;
 }
 
 @font-face {
@@ -67,9 +69,11 @@ h3{
 }
 
 a:hover{
-    cursor: pointer;
+    /* cursor: pointer; */
     background-color: #3c3c3c;
     transform: translate(8px, 0px);
+
+    cursor: url("cursor/link.cur"), pointer;
 }
 
 .line{
@@ -95,4 +99,8 @@ a:hover{
 
 .links a:hover{
     transform: translate(0px, -3px);
+}
+
+.links img{
+    cursor: url("cursor/link.cur"), pointer;
 }
