--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a:hover{
     margin: auto;
     margin-top: 15px;
     width: 200px;
-    border-bottom: 1px solid #b1b1b1;
+    border-bottom: 1px solid #777;
 }
 .links{
     display: flex;
