--- a/credit-card-form/style.css
+++ b/credit-card-form/style.css
@@ -24,6 +24,15 @@ body{
 
     /* background-color: #1e1e1e; */
 }
+.load-bg{
+    margin-top: 10px;
+    width: 100%;
+}
+#imgInp{
+    padding: 8px;
+    border-radius: 10px;
+    width: 95%;
+}
 .bg-div{
     z-index: -10;
 
